--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <title>Library</title>
 </head>
 <body>
+  <div class="sidebar">
+    <h2>ADD NEW BOOK</h2>
+    <form>
+      <p>
+        <label>
+          TITLE:
+          <input type="text" required>
+        </label>
+      </p>
+      <p>
+        <label>
+          AUTHOR:
+          <input type="text" required>
+        </label>
+      </p>
+      <p>
+        <label>
+          PAGES:
+          <input type="number" required>
+        </label>
+      </p>
+      <p>
+        STATUS:
+        <label>
+          <input type="text" required>
+        </label>
+      </p>
+    </form>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
