--- a/index.html
+++ b/index.html
@@ -7,34 +7,46 @@
   <title>Library</title>
 </head>
 <body>
-  <div class="sidebar">
-    <h2>ADD NEW BOOK</h2>
-    <form>
-      <p>
-        <label>
-          TITLE:
-          <input type="text" required>
-        </label>
-      </p>
-      <p>
-        <label>
-          AUTHOR:
-          <input type="text" required>
-        </label>
-      </p>
-      <p>
-        <label>
-          PAGES:
-          <input type="number" required>
-        </label>
-      </p>
-      <p>
-        STATUS:
-        <label>
-          <input type="text" required>
-        </label>
-      </p>
-    </form>
+  <div class="library">
+    <div class="header">
+      <button id="showDialog">ADD NEW BOOK</button>
+    </div>
+    <div class="book-container">
+
+    </div>
+    <dialog class="dialog">
+      <form method="dialog">
+        <p>
+          <label>
+            Title:
+            <input type="text" required>
+          </label>
+        </p>
+        <p>
+          <label>
+            Author:
+            <input type="text" required>
+          </label>
+        </p>
+        <p>
+          <label>
+            Pages:
+            <input type="number" required>
+          </label>
+        </p>
+        <p>
+          <label for="status">Choose the Status:</label>
+          <select name="status">
+            <option value="Read">Read</option>
+            <option value="Not Read">Not Read</option>
+          </select>
+        </p>
+        <div>
+          <button id="close"formmethod="dialog">Cancel</button>
+          <button id="confirmBtn">Confirm</button>
+        </div>
+      </form>
+    </dialog>
   </div>
   <script src="script.js"></script>
 </body>
