--- a/index.html
+++ b/index.html
@@ -4,50 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>Library</title>
 </head>
 <body>
-  <div class="library">
-    <div class="header">
-      <button id="showDialog">ADD NEW BOOK</button>
-    </div>
-    <div class="book-container">
-
-    </div>
-    <dialog class="dialog">
-      <form method="dialog">
-        <p>
-          <label>
-            Title:
-            <input type="text" required>
-          </label>
-        </p>
-        <p>
-          <label>
-            Author:
-            <input type="text" required>
-          </label>
-        </p>
-        <p>
-          <label>
-            Pages:
-            <input type="number" required>
-          </label>
-        </p>
-        <p>
-          <label for="status">Choose the Status:</label>
-          <select name="status">
-            <option value="Read">Read</option>
-            <option value="Not Read">Not Read</option>
-          </select>
-        </p>
-        <div>
-          <button id="close"formmethod="dialog">Cancel</button>
-          <button id="confirmBtn">Confirm</button>
-        </div>
-      </form>
-    </dialog>
-  </div>
-  <script src="script.js"></script>
+  
 </body>
 </html>
