Display Book Cards on Screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <title>Library</title>
 </head>
 <body>
-  
+  <div class="header">
+    <button id="add-button">Add +</button>
+  </div>
+  <dialog>
+    <form>
+      <p>
+        <label for="title">
+          Title:
+          <input type="text" required id="title" name="title" value = "">
+        </label>
+      </p>
+      <p>
+        <label for="author">
+          Author:
+          <input type="text" required id="author" name="author" value = "">
+        </label>
+      </p>
+      <button id="confirm-button">Confirm</button>
+    </form>
+  </dialog>
 </body>
 </html>
