Add pages and status

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
           <input type="text" required id="author" name="author" value = "">
         </label>
       </p>
+      <p>
+        <label for="pages">
+          Pages:
+          <input type="number" required id="pages" name="pages" value = "">
+        </label>
+      </p>
+      <p>
+        <label for="read">
+          Read:
+          <input type="radio" required id="read" name="read">
+        </label>
+      </p>
       <button id="confirm-button">Confirm</button>
     </form>
   </dialog>
