Change status problem

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="header">
     <button id="add-button">Add +</button>
+    <h1>MY LIBRARY</h1>
   </div>
   <dialog>
     <form>
